config(framework): update CSRF and property_info for Symfony 7.3

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -2,7 +2,8 @@
 framework:
     secret: '%env(APP_SECRET)%'
     default_locale: '%locale%'
-    csrf_protection: ~
+    csrf_protection:
+        enabled: true
     http_method_override: true
     annotations:
         enabled: false
