feat(security): enable stateless CSRF protection for authentication
- Add stateless_token_ids configuration for 'authenticate' and 'logout' tokens
- Implement double-submit cookie pattern for CSRF validation
- Enable page caching by removing session dependency for CSRF tokens
- Maintain backward compatibility with existing CSRF implementation

Leverages Symfony 7.2+ stateless CSRF feature for better scalability
and performance while preserving security protection.

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -4,6 +4,7 @@ framework:
     default_locale: '%locale%'
     csrf_protection:
         enabled: true
+        stateless_token_ids: ['authenticate', 'logout']
     http_method_override: true
     annotations:
         enabled: false
