feat(security): enable CSRF protection for logout action
- Add enable_csrf: true to logout configuration
- Integrate logout action with stateless CSRF protection
- Enhance security by protecting logout endpoint from CSRF attacks
- Complement stateless CSRF implementation for complete protection

Ensures consistent CSRF protection across all security-sensitive
endpoints in the application.

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,6 +32,8 @@ security:
                 target: _login
                 # Ensure any custom session data is cleared on logout
                 invalidate_session: true
+                # Enable CSRF protection for logout (now stateless)
+                enable_csrf: true
 
             # Remember me functionality (uses Symfony's built-in feature)
             remember_me:
