feat: unify login routes for auth modernization (Phase 1)
- Unified login route to handle both GET and POST on /login
- Updated LdapAuthenticator to support unified route and legacy login_check
- Enhanced SecurityController with redirect for already authenticated users
- Added form_login configuration for CSRF support
- Fixed services.yaml to remove non-existent DependencyInjection directory

This is Phase 1 of the authentication modernization to align with Symfony 7.3 best practices

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,9 +22,15 @@ security:
         main:
             provider: app_user_provider
             lazy: true
-            # Use the new authenticator manager in Symfony 5.4+
+            # Use the new authenticator manager in Symfony 7.3
             custom_authenticators:
                 - App\Security\LdapAuthenticator
+
+            # Form login configuration for unified route
+            form_login:
+                login_path: _login
+                check_path: _login
+                enable_csrf: true
 
             # Standard logout configuration
             logout:
@@ -32,7 +38,7 @@ security:
                 target: _login
                 # Ensure any custom session data is cleared on logout
                 invalidate_session: true
-                # Enable CSRF protection for logout (now stateless)
+                # Enable CSRF protection for logout
                 enable_csrf: true
 
             # Remember me functionality (uses Symfony's built-in feature)
