feat: add Playwright e2e tests for login flow
- Add Playwright test framework with chromium browser
- Create login.spec.ts with 7 tests covering:
  - Login form display
  - Invalid credentials error
  - Successful login (developer, unittest users)
  - Logout functionality
  - Protected route redirects
- Add Makefile targets: e2e, e2e-install
- Configure LDAP container to auto-import dev users on startup
- Disable logout CSRF (ExtJS frontend uses simple links)

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,10 @@ config/quality/var/
 /.php-cs-fixer.php
 /.php-cs-fixer.cache
 ###< friendsofphp/php-cs-fixer ###
+
+###> playwright ###
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+###< playwright ###
